--- a/hello/templates/hello/jackcable.html
+++ b/hello/templates/hello/jackcable.html
@@ -1,5 +1,8 @@
 <!--{% extends "content/product_layout.html" %}
 {% block title %}-->
+
+<!-- Dhrithi Mogilisetty IS218 -->
+
     <!DOCTYPE html>
     <html>
         <head>
@@ -135,4 +138,5 @@
     </html>
 <!--{% endblock %}
 {% block content %}
+
 {% endblock %}-->
