--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -10,14 +10,37 @@
     <body>
         <div class="navbar">
                 <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-                <a href="{% url 'about' %}" class="navbar-item">About</a>
-                <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
-                <a href="{% url 'log' %}" class="navbar-item">Log Message</a>
         </div>
 
         <div class="body-content">
             {% block content %}
             {% endblock %}
+
+            <div class="comment-section">
+                <h3>Comments</h3>
+
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ comment_form.as_p }}
+                    <button type="submit" name="comment_submit">Submit</button>
+                </form>
+
+                <hr>
+
+                {% if comments %}
+                    {% for comment in comments %}
+                        <div style="margin-bottom:15px; padding:10px;">
+                            <strong>{{ comment.name }}</strong>
+                            <small>{{ comment.created_at }}</small>
+                            <p>{{ comment.comment }}</p>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <p>No comments yet.</p>
+                {% endif %}
+            </div>
+
+
             <hr/>
             <footer>
                 <p>&copy; 2024</p>
