--- a/hello/templates/hello/jackcable.html
+++ b/hello/templates/hello/jackcable.html
@@ -3,6 +3,8 @@
 
 <!-- Dhrithi Mogilisetty IS218 -->
 
+{% load static %}
+
     <!DOCTYPE html>
     <html>
         <head>
@@ -119,7 +121,7 @@
             </style>
             <div class="product-card">
                 <div class="image-wrapper">
-                    <img src="jack.jpg" alt="G5 Audio Jack Cable (5 inches)" class="product-image">
+                    <img src="{% static 'jack.jpg' %}" alt="G5 Audio Jack Cable (5 inches)" class="product-image">
                 </div>
 
                 <div class="product-info">
@@ -140,3 +142,4 @@
 {% block content %}
 
 {% endblock %}-->
+
