--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -4,4 +4,18 @@ Home
 {% endblock %}
 {% block content %}
 
+  <h1>Music Object Display Forum</h1>
+  <p>Explore our music objects and leave comments.</p>
+
+  <div style="margin-top:16px;">
+    <a href="audiomixer.html">Audio Mixer</a> |
+    <a href="earbuds.html">Earbuds</a> |
+    <a href="jackcable.html">Jack Cable</a> |
+    <a href="CompactedDisc.html">Blank CD</a> |
+    <a href="CDplayer.html">CD Player</a> |
+    <a href="drums.html">Drum Set</a> |
+    <a href="guitar.html">Electric Guitar</a> |
+    <a href="piano.html">Piano</a>
+  </div>
+  
 {% endblock %}
