Homepage pulls products from DB; preview support

--- a/hello/templates/hello/guitar.html
+++ b/hello/templates/hello/guitar.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %}
+{% extends "hello/layout.html" %}
+
 
 {% block title %}Product Page: G5 Electric Guitar Edition 1{% endblock %}
 
