Homepage links to handmade product pages

--- a/hello/templates/hello/drums.html
+++ b/hello/templates/hello/drums.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "hello/layout.html" %}
 
 {% block title %}Product Page: G5 Drumset: Black Edition{% endblock %}
 
