--- a/hello/templates/hello/audiomixer.html
+++ b/hello/templates/hello/audiomixer.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "hello/layout.html" %}
 
 {% block title %}Product Page: G5 Professional Audio Mixer{% endblock %}
 
