--- a/hello/templates/hello/piano.html
+++ b/hello/templates/hello/piano.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "hello/layout.html" %}
 
 {% block title %}Product Page: G5 Stand-Still Piano{% endblock %}
 
