--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>{% block title %}{% endblock %}</title>
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}"/>
-    </head>
+  <head>
+    <meta charset="utf-8"/>
+    <title>{% block title %}{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}"/>
+  </head>
 
-    <body>
-        <div class="navbar">
-                <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+  <body class="page">
+    <div class="page-content">
+      <div class="navbar">
+        <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+      </div>
+
+      <div class="body-content">
+        {% block content %}{% endblock %}
+
+        {% if show_comments %}
+        <div class="comment-section">
+          <h3>Comments</h3>
+
+          <form method="POST">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button type="submit" name="comment_submit">Submit</button>
+          </form>
+
+          <hr>
+
+          {% if comments %}
+            {% for comment in comments %}
+              <div style="margin-bottom:15px; padding:10px;">
+                <strong>{{ comment.name }}</strong>
+                <small>{{ comment.created_at }}</small>
+                <p>{{ comment.comment }}</p>
+              </div>
+            {% endfor %}
+          {% else %}
+            <p>No comments yet.</p>
+          {% endif %}
         </div>
+        {% endif %}
+      </div>
+    </div>
 
-        <div class="body-content">
-            {% block content %}
-            {% endblock %}
-
-
-            {% if show_comments %}
-            <div class="comment-section">
-                <h3>Comments</h3>
-
-                <form method="POST">
-                {% csrf_token %}
-                {{ comment_form.as_p }}
-                <button type="submit" name="comment_submit">Submit</button>
-                </form>
-
-                <hr>
-
-                {% if comments %}
-                {% for comment in comments %}
-                    <div style="margin-bottom:15px; padding:10px;">
-                    <strong>{{ comment.name }}</strong>
-                    <small>{{ comment.created_at }}</small>
-                    <p>{{ comment.comment }}</p>
-                    </div>
-                {% endfor %}
-                {% else %}
-                <p>No comments yet.</p>
-                {% endif %}
-            </div>
-            {% endif %}
-
-
-            <hr/>
-            <footer>
-                <p>&copy; 2024</p>
-            </footer>
-        </div>
-    </body>
+    <footer class="site-footer">
+      <p>&copy; 2024</p>
+    </footer>
+  </body>
 </html>
