removed accidental duplication of "$" in product_details.html

--- a/hello/templates/hello/product_detail.html
+++ b/hello/templates/hello/product_detail.html
@@ -5,6 +5,6 @@
 <br>
 <p>{{ product.description }}</p>
 
-<p><strong>Price: $</strong> ${{ product.pricing }}</p>
+<p><strong>Price: $</strong> {{ product.pricing }}</p>
 
 {% endblock %}
