--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -11,6 +11,7 @@
     <div class="page-content">
       <div class="navbar">
         <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+        <a href="{% url 'feedback' %}" class="navbar-brand">Feedback</a>
       </div>
 
       <div class="body-content">
